--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "dependencies": {
         "@babel/plugin-proposal-class-properties": "^7.12.1",
         "@emotion/css": "^11.11.2",
+        "@floating-ui/utils": "^0.2.10",
         "@hello-pangea/dnd": "^16.6.0",
         "@radix-ui/react-select": "^2.2.5",
         "@radix-ui/react-tooltip": "^1.2.7",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
+        "@types/webextension-polyfill": "^0.12.3",
         "chrome-promise": "^3.0.5",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -37,7 +39,8 @@
         "react-popper": "^2.3.0",
         "react-simple-img": "^3.0.0",
         "semver": "^7.6.2",
-        "tailwind-merge": "^3.3.0"
+        "tailwind-merge": "^3.3.0",
+        "webextension-polyfill": "^0.12.0"
     },
     "devDependencies": {
         "@babel/core": "^7.24.7",
