--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,26 +1,26 @@
 {
-    "manifest_version": 3,
+    "manifest_version": 2,
     "name": "Tabli",
     "description": "A simple, powerful tab manager",
     "version": "4.0.4",
-    "action": {
+    "browser_action": {
         "default_icon": "images/glyphicons_154_more_windows.png",
         "default_popup": "popup.html",
         "default_title": "Tabli"
     },
     "background": {
-        "service_worker": "js/service-worker.js"
+        "scripts": ["js/common.bundle.js", "js/bgHelper.bundle.js"],
+        "persistent": false
     },
-    "permissions": ["storage", "tabs", "bookmarks", "favicon"],
-    "optional_permissions": ["activeTab", "scripting", "tabCapture"],
+    "permissions": ["storage", "tabs", "bookmarks"],
+    "optional_permissions": ["activeTab", "tabCapture"],
     "icons": {
         "16": "images/glyphicons_154_more_windows.png",
         "48": "images/Multimedia-12-48.png",
         "128": "images/Multimedia-12-128.png"
     },
-
     "commands": {
-        "_execute_action": {
+        "_execute_browser_action": {
             "suggested_key": {
                 "default": "Ctrl+Period",
                 "mac": "MacCtrl+Period"
@@ -36,11 +36,11 @@
             }
         }
     },
-    "web_accessible_resources": [
-        {
-            "resources": ["_favicon/*"],
-            "matches": ["<all_urls>"],
-            "extension_ids": ["*"]
+    "web_accessible_resources": ["_favicon/*"],
+    "applications": {
+        "gecko": {
+            "id": "tabli@gettabli.com",
+            "strict_min_version": "57.0"
         }
-    ]
+    }
 }
