Firefox-version-updates

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@types/webextension-polyfill": "^0.12.3",
         "chrome-promise": "^3.0.5",
         "class-variance-authority": "^0.7.1",
+        "clean-css": "^5.3.2",
         "clsx": "^2.1.1",
         "deep-diff": "^1.0.2",
         "escape-string-regexp": "4.0.0",
@@ -38,7 +39,9 @@
         "react-dom": "18.3.1",
         "react-popper": "^2.3.0",
         "react-simple-img": "^3.0.0",
+        "schema-utils": "^4.3.2",
         "semver": "^7.6.2",
+        "source-map": "^0.7.4",
         "tailwind-merge": "^3.3.0",
         "webextension-polyfill": "^0.12.0"
     },
@@ -58,10 +61,12 @@
         "@types/deep-diff": "^1.0.5",
         "@types/jest": "^29.5.12",
         "@types/lodash": "^4.17.6",
+        "@types/node": "^24.0.7",
         "@types/semver": "^7.5.8",
         "babel-jest": "^29.7.0",
         "babel-loader": "^9.1.3",
         "bootstrap": "^5.3.3",
+        "cross-env": "^7.0.3",
         "difflet": "^1.0.1",
         "ekko-lightbox": "^5.3.0",
         "eslint": "^9.6.0",
@@ -89,33 +94,33 @@
         "ts-loader": "^9.5.1",
         "typescript": "^5.5.2",
         "url-loader": "^4.1.1",
-        "webpack": "^5.92.1",
+        "webpack": "^5.99.9",
         "webpack-bundle-analyzer": "^4.10.2",
         "webpack-cli": "^5.1.4"
     },
     "scripts": {
-        "build:testdir": "mkdirp build && mkdirp build/testData",
-        "build:dir": "mkdirp build && mkdirp build/css && mkdirp build/js && mkdirp build/fonts && mkdirp build/images",
-        "build:bootstrap": "cp -r node_modules/bootstrap/dist/* build",
-        "build:jquery": "cp -r node_modules/jquery/dist/* build/js",
-        "build:html": "cp -r src/css/* build/css && cp -r src/html/* build",
-        "build:testhtml": "cp -r src/html_test/* build",
-        "build:images": "cp -r src/images/* src/assets/*.png build/images",
-        "build:popper": "cp -r node_modules/popper.js/dist/* build/js",
-        "build:testData": "cp -r test-data/*.json build/testData",
-        "build:manifest": "cp src/manifest.json build",
-        "build:sw": "cp src/service-worker.js build/js",
+        "build:testdir": "cross-env mkdirp build && cross-env mkdirp build/testData",
+        "build:dir": "cross-env mkdirp build && cross-env mkdirp build/css && cross-env mkdirp build/js && cross-env mkdirp build/fonts && cross-env mkdirp build/images",
+        "build:bootstrap": "cross-env xcopy /E /I /Y node_modules\\bootstrap\\dist\\* build",
+        "build:jquery": "cross-env xcopy /E /I /Y node_modules\\jquery\\dist\\* build\\js",
+        "build:html": "cross-env xcopy /E /I /Y src\\css\\* build\\css && cross-env xcopy /E /I /Y src\\html\\* build",
+        "build:testhtml": "cross-env xcopy /E /I /Y src\\html_test\\* build",
+        "build:images": "cross-env xcopy /E /I /Y src\\images\\* build\\images && cross-env xcopy /E /I /Y src\\assets\\*.png build\\images",
+        "build:popper": "echo Skipping popper - not needed",
+        "build:testData": "cross-env xcopy /E /I /Y test-data\\*.json build\\testData",
+        "build:manifest": "cross-env copy src\\manifest.json build\\manifest.json",
+        "build:sw": "cross-env copy src\\service-worker.js build\\js\\service-worker.js",
         "build-test-assets": "npm run build:testdir && npm run build:testhtml && npm run build:testData",
         "build-assets": "npm run build:dir && npm run build:jquery && npm run build:bootstrap && npm run build:html && npm run build:images && npm run build:manifest && npm run build:sw",
-        "build-dev": "npm run build-assets && webpack --mode development",
-        "build-prod": "npm run build-assets && webpack --env prod --mode production",
+        "build-dev": "npm run build-assets && npx webpack --mode development",
+        "build-prod": "npm run build-assets && npx webpack --env prod --mode production",
         "build-test": "npm run build-test-assets",
-        "clean": "rm -rf ./build",
+        "clean": "cross-env rmdir /S /Q build",
         "lint": "eslint .",
         "lintfix": "eslint --fix .",
-        "watch": "webpack --mode development --watch",
-        "watch-prod": "webpack --env prod --mode production --watch",
-        "webpack-analyze": "webpack --env prod --mode production --profile --json > stats.json; ./node_modules/.bin/webpack-bundle-analyzer stats.json ./build/js",
+        "watch": "npx webpack --mode development --watch",
+        "watch-prod": "npx webpack --env prod --mode production --watch",
+        "webpack-analyze": "npx webpack --env prod --mode production --profile --json > stats.json && npx webpack-bundle-analyzer stats.json ./build/js",
         "test": "jest",
         "storybook": "start-storybook -s ./build -p 6006",
         "build-storybook": "build-storybook -o ./doc/site/dist/storybook"
