--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
         "skipLibCheck": true,
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
-        "strict": true,
+        "strict": false,
         "forceConsistentCasingInFileNames": true,
         "module": "esnext",
         "moduleResolution": "node",
@@ -15,11 +15,12 @@
         "isolatedModules": true,
         "downlevelIteration": true,
         "rootDirs": ["src/ts", "stories"],
-        "jsx": "react"
+        "jsx": "react",
+        "noImplicitAny": false
     },
     "awesomeTypescriptLoaderOptions": {
         "silent": true
     },
-    "include": ["src/ts"],
-    "types": ["chrome", "react=dom/experimental"]
+    "include": ["src/ts", "src/ts/types"],
+    "types": ["webextension-polyfill"]
 }
